--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.0.0",
     "@mui/material": "^6.0.0",
+    "@types/lodash": "^4.17.7",
     "date-fns": "^3.6.0",
     "firebase": "^10.13.1",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
